aktualne zmiany i poprawki
